--- a/app.css
+++ b/app.css
@@ -197,7 +197,45 @@ section {
 }
 
 footer {
+    text-align: center;
+}
+
+footer div {
     width: 16em;
-    margin: 1em 2.5em 0em 2.5em;
-    border: 1px solid black;
+    margin: 1em 2.5em 0em 5.5em;
+    /* border: 1px solid black; */
+    font-size: small;
+    color: rgb(161, 159, 159);
+    display: flex;
+    justify-content: center;
+}
+
+footer div {
+    width: 16em;
+    margin: 1em 2.5em 0em 5.5em;
+    /* border: 1px solid black; */
+    font-size: small;
+    color: rgb(161, 159, 159);
+    display: flex;
+    justify-content: center;
+}
+
+footer #seconddiv {
+    width: 14.7em;
+    margin: 1em 2.5em 0em 5.8em;
+    /* border: 1px solid black; */
+    font-size: small;
+    color: rgb(161, 159, 159);
+    display: flex;
+    justify-content: center;
+}
+
+footer #fourthdiv {
+    width: 12em;
+    margin: 1em 3em 0.8em 6.7em;
+    /* border: 1px solid black; */
+    font-size: small;
+    color: rgb(161, 159, 159);
+    display: flex;
+    justify-content: center;
 }
